--- a/playPadel/website/templates/website/impianto_detail.html
+++ b/playPadel/website/templates/website/impianto_detail.html
@@ -76,6 +76,7 @@
                                     <div class="d-flex flex-column justify-content-center align-items-center mt-2 w-75 mx-auto">
                                         <h5 class="text-center">{{ n.titolo }}</h5>
                                         <p class="text-center mb-0">{{ n.descrizione }}</p>
+                                        <small class="text-muted mt-2">{{ n.data }}</small>
                                     </div>
                                 </div>
                             {% else %}
@@ -83,6 +84,7 @@
                                     <div class="d-flex flex-column justify-content-center align-items-center mt-2 w-75 mx-auto">
                                         <h5 class="text-center">{{ n.titolo }}</h5>
                                         <p class="text-center mb-0">{{ n.descrizione }}</p>
+                                        <small class="text-muted mt-2">{{ n.data }}</small>
                                     </div>
                                 </div>
                             {% endif %}
