--- a/playPadel/website/templates/cliente/prenotazioni_cliente.html
+++ b/playPadel/website/templates/cliente/prenotazioni_cliente.html
@@ -22,81 +22,86 @@
                 <div class="col-md-2"></div>
             </div>
 
-                <div class="row mt-4">
-                  <div class="col-3 border-right border-dark">
+            <div class="row mt-4">
+                <div class="col-3 border-right border-dark">
                     <div class="list-group text-left" id="list-tab" role="tablist">
-                      <a class="list-group-item list-group-item-action active" id="list-all-tab" data-toggle="list" href="#list-all" role="tab" aria-controls="settings">Tutte</a>
-                      <a class="list-group-item list-group-item-action" id="list-active-tab" data-toggle="list" href="#list-active" role="tab" aria-controls="home">Attive</a>
-                      <a class="list-group-item list-group-item-action" id="list-previous-tab" data-toggle="list" href="#list-previous" role="tab" aria-controls="profile">Passate</a>
+                        <a class="list-group-item list-group-item-action active" id="list-all-tab" data-toggle="list" href="#list-all" role="tab" aria-controls="settings">Tutte</a>
+                        <a class="list-group-item list-group-item-action" id="list-active-tab" data-toggle="list" href="#list-active" role="tab" aria-controls="home">Attive</a>
+                        <a class="list-group-item list-group-item-action" id="list-previous-tab" data-toggle="list" href="#list-previous" role="tab" aria-controls="profile">Passate</a>
                     </div>
-                  </div>
-                  <div class="col-9">
-                      <div class="tab-content" id="nav-tabContent">
-                          <div class="tab-pane fade show active" id="list-all" role="tabpanel" aria-labelledby="list-all-tab">
-                              <ul class="list-group list-group-flush">
-                                  {% for p in dati_prenotazione reversed %}
-                                      <li class="list-group-item">
-                                          <div class="d-flex w-100 justify-content-between">
-                                              <h5 class="mb-1">{{ p.data|date:'d-m-Y' }} | {{ p.ora_inizio|date:'H:i' }} - {{ p.ora_fine|date:'H:i' }}</h5>
-                                              {% if p.stato == 'Attivo' %}
-                                                  <a href="{% url 'website:homepage' %}" class="btn btn-outline-danger btn-sm " role="button" data-toggle="tooltip" data-placement="top" title="Cancella prenotazione">
-                                                      <i class="bi bi-trash"></i>
-                                                  </a>
-                                              {% endif %}
-                                          </div>
-                                          <p class="mb-1 text-left"><strong>Impianto: </strong>{{ p.nome_impianto }} - Campo {{ p.id_campo }}</p>
-                                          <small><strong>ID prenotazione: </strong>{{ p.pren_id }}</small>
-                                      </li>
-                                  {% empty %}
-                                      <h5 class="py-4 mt-4">Ancora nessuna prenotazione...</h5>
-                                  {% endfor %}
-                              </ul>
-                          </div>
-                          <div class="tab-pane fade" id="list-active" role="tabpanel" aria-labelledby="list-active-tab">
-                              <ul class="list-group list-group-flush">
-                                  {% for p in dati_prenotazione reversed %}
-                                      {% if p.stato == 'Attivo' %}
-                                          <li class="list-group-item">
-                                          <div class="d-flex w-100 justify-content-between">
-                                              <h5 class="mb-1">{{ p.data|date:'d-m-Y' }} | {{ p.ora_inizio|date:'H:i' }} - {{ p.ora_fine|date:'H:i' }}</h5>
-                                              {% if p.stato == 'Attivo' %}
-                                                  <a href="{% url 'website:homepage' %}" class="btn btn-outline-danger btn-sm " role="button" data-toggle="tooltip" data-placement="top" title="Cancella prenotazione">
-                                                      <i class="bi bi-trash"></i>
-                                                  </a>
-                                              {% endif %}
-                                          </div>
-                                          <p class="mb-1 text-left"><strong>Impianto: </strong>{{ p.nome_impianto }} - Campo {{ p.id_campo }}</p>
-                                          <small><strong>ID prenotazione: </strong>{{ p.pren_id }}</small>
-                                      </li>
-                                      {% endif %}
-                                  {% empty %}
-                                      <h5 class="py-4 mt-4">Ancora nessuna prenotazione...</h5>
-                                  {% endfor %}
-                              </ul>
-                          </div>
-                          <div class="tab-pane fade" id="list-previous" role="tabpanel" aria-labelledby="list-previous-tab">
-                              <ul class="list-group list-group-flush">
-                                  {% for p in dati_prenotazione reversed %}
-                                      {% if p.stato == 'Passato' %}
-                                          <li class="list-group-item">
-                                          <div class="d-flex w-100 justify-content-between">
-                                              <h5 class="mb-1">{{ p.data|date:'d-m-Y' }} | {{ p.ora_inizio|date:'H:i' }} - {{ p.ora_fine|date:'H:i' }}</h5>
-                                          </div>
-                                          <p class="mb-1 text-left">
-                                              <strong>Impianto: </strong>{{ p.nome_impianto }} - Campo {{ p.id_campo }}
-
-                                          </p>
-                                          <small><strong>ID prenotazione: </strong>{{ p.pren_id }}</small>
-                                      </li>
-                                      {% endif %}
-                                  {% empty %}
-                                      <h5 class="py-4 mt-4">Ancora nessuna prenotazione...</h5>
-                                  {% endfor %}
-                              </ul>
-                          </div>
+                    <div class="alert alert-warning mt-4" role="alert">
+                        <h4 class="alert-heading">Attenzione!</h4>
+                        <p class="text-center">È possibile <strong>annullare</strong> una prenotazione fino al giorno prima della data fissata. Contattare l'impianto per ottenere maggiore assistenza.</p>
+                        <hr>
+                        <p class="mb-0 text-center">PlayPadel</p>
                     </div>
-                  </div>
                 </div>
+                <div class="col-9">
+                    <div class="tab-content" id="nav-tabContent">
+                        <div class="tab-pane fade show active" id="list-all" role="tabpanel" aria-labelledby="list-all-tab">
+                            <ul class="list-group list-group-flush">
+                                {% for p in dati_prenotazione reversed %}
+                                    <li class="list-group-item">
+                                        <div class="d-flex w-100 justify-content-between">
+                                            <h5 class="mb-1">{{ p.data|date:'d-m-Y' }} | {{ p.ora_inizio|date:'H:i' }} - {{ p.ora_fine|date:'H:i' }}</h5>
+                                            {% if p.stato == 'Attivo' %}
+                                                <a href="{% url 'website:homepage' %}" class="btn btn-outline-danger btn-sm " role="button" data-toggle="tooltip" data-placement="top" title="Cancella prenotazione">
+                                                    <i class="bi bi-trash"></i>
+                                                </a>
+                                            {% endif %}
+                                        </div>
+                                        <p class="mb-1 text-left"><strong>Impianto: </strong>{{ p.nome_impianto }} - Campo {{ p.id_campo }}</p>
+                                        <small><strong>ID prenotazione: </strong>{{ p.pren_id }}</small>
+                                    </li>
+                                {% empty %}
+                                    <h5 class="py-4 mt-4">Ancora nessuna prenotazione...</h5>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                        <div class="tab-pane fade" id="list-active" role="tabpanel" aria-labelledby="list-active-tab">
+                            <ul class="list-group list-group-flush">
+                                {% for p in dati_prenotazione reversed %}
+                                    {% if p.stato == 'Attivo' %}
+                                        <li class="list-group-item">
+                                            <div class="d-flex w-100 justify-content-between">
+                                                <h5 class="mb-1">{{ p.data|date:'d-m-Y' }} | {{ p.ora_inizio|date:'H:i' }} - {{ p.ora_fine|date:'H:i' }}</h5>
+                                                {% if p.stato == 'Attivo' %}
+                                                    <a href="{% url 'website:homepage' %}" class="btn btn-outline-danger btn-sm " role="button" data-toggle="tooltip" data-placement="top" title="Cancella prenotazione">
+                                                        <i class="bi bi-trash"></i>
+                                                    </a>
+                                                {% endif %}
+                                            </div>
+                                            <p class="mb-1 text-left"><strong>Impianto: </strong>{{ p.nome_impianto }} - Campo {{ p.id_campo }}</p>
+                                            <small><strong>ID prenotazione: </strong>{{ p.pren_id }}</small>
+                                        </li>
+                                    {% endif %}
+                                {% empty %}
+                                    <h5 class="py-4 mt-4">Ancora nessuna prenotazione...</h5>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                        <div class="tab-pane fade" id="list-previous" role="tabpanel" aria-labelledby="list-previous-tab">
+                            <ul class="list-group list-group-flush">
+                                {% for p in dati_prenotazione reversed %}
+                                    {% if p.stato == 'Passato' %}
+                                        <li class="list-group-item">
+                                            <div class="d-flex w-100 justify-content-between">
+                                                <h5 class="mb-1">{{ p.data|date:'d-m-Y' }} | {{ p.ora_inizio|date:'H:i' }} - {{ p.ora_fine|date:'H:i' }}</h5>
+                                            </div>
+                                            <p class="mb-1 text-left">
+                                                <strong>Impianto: </strong>{{ p.nome_impianto }} - Campo {{ p.id_campo }}
+                                            </p>
+                                            <small><strong>ID prenotazione: </strong>{{ p.pren_id }}</small>
+                                        </li>
+                                    {% endif %}
+                                {% empty %}
+                                    <h5 class="py-4 mt-4">Ancora nessuna prenotazione...</h5>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
