--- a/playPadel/templates/playPadel/base.html
+++ b/playPadel/templates/playPadel/base.html
@@ -56,6 +56,17 @@
             </div>
         </header>
 
+        {% for message in messages %}
+            <div class="container position-absolute mt-1" style="left: 50%; transform: translateX(-50%);">
+                <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert" >
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="True">&times;</span>
+                    </button>
+                    {{ message }}
+                </div>
+            </div>
+        {% endfor %}
+
         {% block content %}
         {% endblock %}
 
@@ -73,17 +84,6 @@
                 <p class="text-light mb-0">© 2024 PlayPadel. Tutti i diritti riservati.</p>
             </div>
         </footer>
-
-        {% if messages %}
-            {% for message in messages %}
-                <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
-                    {{ message }}
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-            {% endfor %}
-        {% endif %}
 
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
