--- a/playPadel/website/templates/website/homepage.html
+++ b/playPadel/website/templates/website/homepage.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-    <section class="hero bg-primary text-light text text-center py-5" style="background-image: url('{% static '/img/homepage_photo.png' %}'); opacity: 0.9; background-position: left;">
+    <section class="hero bg-primary text-light text text-center py-5" style="background-image: url('{% static '/img/homepage_photo.png' %}'); background-position: left;">
         <div class="container">
             <h1 class="display-4 text-white"><strong>Benvenuti su PlayPadel</strong></h1>
             <p class="lead"><mark>Prenota facilmente il tuo campo da padel nei migliori impianti della tua città</mark></p>
