Fixed campoNumero field, finished dashboard gestore, started working on modifica dati gestore/impianto

--- a/playPadel/website/templates/cliente/dashboard_cliente.html
+++ b/playPadel/website/templates/cliente/dashboard_cliente.html
@@ -126,7 +126,7 @@
                             </div>
                         </div>
                         <div class="card-footer text-muted">
-                            {{ p.nome_impianto }} - Campo {{ p.id_campo }}
+                            {{ p.nome_impianto }} - Campo {{ p.num_campo }}
                         </div>
                     </div>
                 {% empty %}
