--- a/playPadel/website/templates/cliente/modifica_cliente.html
+++ b/playPadel/website/templates/cliente/modifica_cliente.html
@@ -17,7 +17,7 @@
                     <div class="col-md-2"></div>
                 {% endif %}
                 <div class="col-md-8 text-center">
-                    <h2>Modifica dati</h2>
+                    <h2>Modifica dati cliente</h2>
                 </div>
                 <div class="col-md-2"></div>
             </div>
@@ -46,6 +46,7 @@
                         <label for="eta" class="mr-2">Età:</label>
                         {{ cliente_form.eta }}
                     </div>
+                    <div class="form-inline mx-3"></div>
                 </div>
                 <div class="form-control-file my-3">
                     <label for="foto" class="mr-2">Foto profilo:</label>
