--- a/playPadel/website/templates/cliente/modifica_cliente.html
+++ b/playPadel/website/templates/cliente/modifica_cliente.html
@@ -7,7 +7,7 @@
     <section class="section py-1" style="min-height: 83vh;">
         <div class="container bg-white text-black text text-center py-5">
             <div class="row align-items-center">
-                {% if pre_url == dashboard_url %}
+                {% if pre_url == dashboard_url or pre_url == modifica_url %}
                     <div class="col-md-2 text-left">
                         <a href="{% url 'website:cliente:dashboard_cliente' %}" class="btn btn-outline-dark" data-toggle="tooltip" data-placement="top" title="Torna alla dashboard">
                             <i class="bi bi-arrow-left mr-2"></i>Dashboard
@@ -42,11 +42,6 @@
                         <label for="email" class="mr-2">Email:</label>
                         {{ user_form.email }}
                     </div>
-                    <div class="form-inline mx-3">
-                        <label for="eta" class="mr-2">Età:</label>
-                        {{ cliente_form.eta }}
-                    </div>
-                    <div class="form-inline mx-3"></div>
                 </div>
                 <div class="form-control-file my-3">
                     <label for="foto" class="mr-2">Foto profilo:</label>
