--- a/playPadel/website/templates/gestore/dashboard_gestore.html
+++ b/playPadel/website/templates/gestore/dashboard_gestore.html
@@ -137,7 +137,7 @@
             </div>
             <div class="row mt-5">
                 <i class="bi bi-newspaper mr-3" style="font-size: 1.3rem"></i><h4>News Impianto</h4>
-                <div class="col-md-12">
+                <div class="col-md-12 mt-2">
                     <ul class="list-group list-group-flush">
                         {% for n in news %}
                             <li class="list-group-item">
@@ -173,7 +173,7 @@
                 {% else %}
                     <span class="badge badge-primary ml-3 my-auto">0</span>
                 {% endif %}
-                <div class="col-md-12">
+                <div class="col-md-12 mt-2">
                     <ul class="list-group list-group-flush">
                         {% for p in prenotazioni_clienti %}
                             <li class="list-group-item">
