--- a/playPadel/templates/playPadel/base.html
+++ b/playPadel/templates/playPadel/base.html
@@ -35,14 +35,14 @@
                             </button>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu">
                                 <h6 class="dropdown-header">Accesso effettuato come <strong>{{ user.username }}</strong></h6>
-                                {% if user.is_cliente %}
-                                    <a href="{% url 'website:cliente:dashboard_cliente' %}" class="dropdown-item">Dashboard & Storico</a>
-                                    <a href="{% url 'website:cliente:modifica_cliente' %}" class="dropdown-item">Modifica dati</a>
-                                    <a href="{% url 'website:cliente:prenotazioni_cliente' %}" class="dropdown-item">Prenotazioni</a>
-                                {% elif user.is_staff %}
+                                {% if user.is_staff %}
                                     <a href="{% url 'website:gestore:dashboard_gestore' %}" class="dropdown-item">Dashboard & Impianto</a>
                                     <a href="{% url 'website:gestore:modifica_gestore' %}" class="dropdown-item">Modifica dati</a>
                                     <a href="{% url 'website:gestore:modifica_impianto_gestore' %}" class="dropdown-item">Modifica impianto</a>
+                                {% elif user.is_cliente %}
+                                    <a href="{% url 'website:cliente:dashboard_cliente' %}" class="dropdown-item">Dashboard & Storico</a>
+                                    <a href="{% url 'website:cliente:modifica_cliente' %}" class="dropdown-item">Modifica dati</a>
+                                    <a href="{% url 'website:cliente:prenotazioni_cliente' %}" class="dropdown-item">Prenotazioni</a>
                                 {% endif %}
                                 <div class="dropdown-divider"></div>
                                 <a href="{% url 'logout' %}" class="dropdown-item">Esci</a>
